@@ -42,8 +42,6 @@
 // MISC
 //
 
-int numdefaults; //e6y
-
 boolean M_WriteFile (char const* name,void* source,int length);
 
 int M_ReadFile (char const* name,byte** buffer);
